SpireKey support improvements/fixes
- Adding translations for SpireKey success/failure messages.
- Adding SpireKey hardware wallet option.
- Updating transaction signing to support SpireKey.
- Updating receiver selection and validation to support r:accounts.

--- a/public/locales/af/translation.json
+++ b/public/locales/af/translation.json
@@ -517,6 +517,8 @@
   "popupConfirm": {
     "ledgerSignSuccess": "Ledger-ondertekening suksesvol",
     "ledgerSignFailed": "Ledger-ondertekening misluk of geweier",
+    "spireKeySignSuccess": "SpireKey-ondertekening suksesvol",
+    "spireKeySignFailed": "SpireKey-ondertekening misluk of geweier",
     "transferSuccess": "Oordrag suksesvol",
     "transferFailed": "Oordrag misluk",
     "transactionSent": "Transaksie suksesvol gestuur! Kontroleer status in Geskiedenis",
