Adds token selection to send transaction flow
Enables users to select a token when sending transactions.

This change introduces a token selection dropdown, allowing users to specify which token they want to transfer

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -551,6 +551,7 @@
       "checkingAccountDetails": "Error checking account details"
     },
     "form": {
+      "tokenTitle": "Token",
       "sourceChainId": {
         "title": "Source Chain ID"
       },
