--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -593,6 +593,7 @@
     "insufficientFundsGas": "Insufficient funds for gas fee",
     "newAddressDetected": "New address detected! Add to your contacts",
     "tokenNotExists": "{{contractAddress}} could not exist on CHAIN {{chainId}}!",
+    "rAccountTokenWarning": "This token contract may not support r: accounts for cross-chain. Be sure to verify the destination address and token support before proceeding",
     "transactionParameters": "Transaction Parameters",
     "estimatedGas": "Estimated gas {{gas}}",
     "speed": "{{speed}} speed",
